Fix minor mistake in documentation index template

--- a/resources/index.html.jinja
+++ b/resources/index.html.jinja
@@ -102,7 +102,7 @@
     {%- for meta in metadata %}
     <div class="crate">
       <span class="crate-name">
-        <a href="{{ meta.name }}/{{ meta.version }}/{{ meta.chip }}/{{ package }}">
+        <a href="{{ meta.name }}/{{ meta.version }}/{{ meta.chip }}/{{ meta.package }}">
           {{ meta.chip_pretty }}
         </a>
       </span>
